tests/NormalTests/paczka1/fuzzy1/21473860.err
Error in line 2: v8IQ S32 82,1
Error in line 6: Q0SmMuYDSy0 S32 44,3
Error in line 18: zYDVm2ykY A909 19,4
Error in line 15: AwQry8YXY S131 30,4
Error in line 34: AwQry8YXY S131 51,6
Error in line 35: zYDVm2ykY S322 91,0
